Parser.output
Terminals unused in grammar

    GET
    UNKNOWN


Grammar

    0 $accept: line $end

    1 start: START

    2 end: END

    3 scope: start newline line
    4      | start any_ws line
    5      | start newline
    6      | start any_ws

    7 newScope: scope end

    8 ifMod: IF any_ws expr any_ws

    9 elseif: ELSE_IF

   10 elseMod: ELSE

   11 elifMod: elseif any_ws expr any_ws

   12 elifChain: elifMod scope
   13          | elifChain elifMod scope

   14 if: ifMod newScope
   15   | ifMod scope elseMod any_ws scope end
   16   | ifMod scope elifChain end
   17   | ifMod scope elifChain elseMod any_ws scope end

   18 while: WHILE any_ws expr

   19 whileMod: while any_ws newScope

   20 newline: NEWLINE
   21        | SEMICOLON

   22 term: INT_VAL
   23     | DOUBLE_VAL
   24     | FLOAT_VAL
   25     | STRING_VAL
   26     | CHAR_VAL
   27     | BOOL_VAL
   28     | id

   29 types: INT
   30      | FLOAT
   31      | DOUBLE
   32      | BOOL
   33      | CHAR
   34      | STRING

   35 any_ws: MULTI_WS
   36       | SINGLE_WS

   37 opt_ws: any_ws
   38       | %empty

   39 id: ID

   40 assign: id ':' opt_ws types opt_ws '=' opt_ws expr
   41       | id opt_ws '=' opt_ws expr
   42       | id ':' opt_ws types '<' REF '>' opt_ws '=' opt_ws expr
   43       | id ':' opt_ws LIST '<' types '>' opt_ws '=' opt_ws '[' ']'
   44       | id ':' opt_ws MAP '<' types opt_ws POINTS_TO opt_ws types '>' opt_ws '=' opt_ws '{' '}'
   45       | id ':' opt_ws LIST '<' types '>' opt_ws '=' opt_ws expr
   46       | id opt_ws '=' opt_ws expr '<' REF '>'

   47 exprList: opt_ws expr
   48         | opt_newline expr
   49         | exprList any_ws expr
   50         | exprList opt_newline expr

   51 opt_newline: opt_ws NEWLINE opt_ws

   52 opt_ws_or_nl: opt_ws
   53             | opt_newline

   54 statement: assign
   55          | PRINT opt_ws '|' exprList opt_ws_or_nl '|'
   56          | EXIT '|' opt_ws '|'

   57 math_expr: '(' ADD exprList opt_ws_or_nl ')'
   58          | '(' SUB exprList opt_ws_or_nl ')'
   59          | '(' MUL exprList opt_ws_or_nl ')'
   60          | '(' DIV exprList opt_ws_or_nl ')'
   61          | '(' POW exprList opt_ws_or_nl ')'

   62 compare_expr: '(' LESS any_ws expr any_ws expr opt_ws ')'
   63             | '(' GREATER any_ws expr any_ws expr opt_ws ')'
   64             | '(' LESS_EQUAL any_ws expr any_ws expr opt_ws ')'
   65             | '(' GREATER_EQUAL any_ws expr any_ws expr opt_ws ')'
   66             | '(' EQUAL any_ws expr any_ws expr opt_ws ')'
   67             | '(' NOT_EQUAL any_ws expr any_ws expr opt_ws ')'

   68 boolExpr: '(' AND any_ws expr any_ws expr opt_ws ')'
   69         | '(' NOT any_ws expr opt_ws ')'
   70         | '(' OR any_ws expr any_ws expr opt_ws ')'

   71 expr: term
   72     | math_expr
   73     | '(' CAST any_ws expr any_ws types opt_ws_or_nl ')'
   74     | compare_expr
   75     | boolExpr
   76     | id '.' ADD_LIST '|' opt_ws expr opt_ws '|'
   77     | id '.' ADD_MAP '|' opt_ws expr any_ws expr opt_ws '|'
   78     | id '[' opt_ws expr opt_ws ']'
   79     | id '.' SET '|' opt_ws expr any_ws expr opt_ws '|'

   80 prog: expr newline
   81     | expr EOPU
   82     | statement newline
   83     | statement EOPU
   84     | newScope
   85     | newline
   86     | if
   87     | whileMod
   88     | EOPU
   89     | any_ws
   90     | error

   91 line: prog
   92     | line prog


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 57 58 59 60 61 62 63 64 65 66 67 68 69 70 73
    ')' (41) 57 58 59 60 61 62 63 64 65 66 67 68 69 70 73
    '.' (46) 76 77 79
    ':' (58) 40 42 43 44 45
    '<' (60) 42 43 44 45 46
    '=' (61) 40 41 42 43 44 45 46
    '>' (62) 42 43 44 45 46
    '[' (91) 43 78
    ']' (93) 43 78
    '{' (123) 44
    '|' (124) 55 56 76 77 79
    '}' (125) 44
    error (256) 90
    INT <types> (258) 29
    FLOAT <types> (259) 30
    DOUBLE <types> (260) 31
    BOOL <types> (261) 32
    CHAR <types> (262) 33
    STRING <types> (263) 34
    LIST <types> (264) 43 45
    MAP <types> (265) 44
    CAST (266) 73
    LESS (267) 62
    GREATER (268) 63
    LESS_EQUAL (269) 64
    GREATER_EQUAL (270) 65
    EQUAL (271) 66
    NOT_EQUAL (272) 67
    PRINT (273) 55
    AND (274) 68
    OR (275) 70
    NOT (276) 69
    EXIT (277) 56
    NEWLINE (278) 20 51
    SEMICOLON (279) 21
    EOPU (280) 81 83 88
    REF (281) 42 46
    ADD (282) 57
    SUB (283) 58
    MUL (284) 59
    DIV (285) 60
    POW (286) 61
    ADD_LIST (287) 76
    ADD_MAP (288) 77
    SET (289) 79
    GET (290)
    POINTS_TO (291) 44
    START (292) 1
    END (293) 2
    IF (294) 8
    ELSE (295) 10
    WHILE (296) 18
    INT_VAL <int_val> (297) 22
    DOUBLE_VAL <dou_val> (298) 23
    STRING_VAL <str_val> (299) 25
    CHAR_VAL <char_val> (300) 26
    BOOL_VAL <bol_val> (301) 27
    ELSE_IF <bol_val> (302) 9
    FLOAT_VAL <flo_val> (303) 24
    MULTI_WS (304) 35
    SINGLE_WS (305) 36
    ID <id> (306) 39
    UNKNOWN (307)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    start (66)
        on left: 1
        on right: 3 4 5 6
    end (67)
        on left: 2
        on right: 7 15 16 17
    scope (68)
        on left: 3 4 5 6
        on right: 7 12 13 15 16 17
    newScope (69)
        on left: 7
        on right: 14 19 84
    ifMod (70)
        on left: 8
        on right: 14 15 16 17
    elseif <bol_val> (71)
        on left: 9
        on right: 11
    elseMod (72)
        on left: 10
        on right: 15 17
    elifMod (73)
        on left: 11
        on right: 12 13
    elifChain (74)
        on left: 12 13
        on right: 13 16 17
    if (75)
        on left: 14 15 16 17
        on right: 86
    while (76)
        on left: 18
        on right: 19
    whileMod (77)
        on left: 19
        on right: 87
    newline (78)
        on left: 20 21
        on right: 3 5 80 82 85
    term <tmp_id> (79)
        on left: 22 23 24 25 26 27 28
        on right: 71
    types <tmp_id> (80)
        on left: 29 30 31 32 33 34
        on right: 40 42 43 44 45 73
    any_ws (81)
        on left: 35 36
        on right: 4 6 8 11 15 17 18 19 37 49 62 63 64 65 66 67 68 69 70 73 77 79 89
    opt_ws (82)
        on left: 37 38
        on right: 40 41 42 43 44 45 46 47 51 52 55 56 62 63 64 65 66 67 68 69 70 76 77 78 79
    id <tmp_id> (83)
        on left: 39
        on right: 28 40 41 42 43 44 45 46 76 77 78 79
    assign <tmp_id> (84)
        on left: 40 41 42 43 44 45 46
        on right: 54
    exprList <tmp_id> (85)
        on left: 47 48 49 50
        on right: 49 50 55 57 58 59 60 61
    opt_newline (86)
        on left: 51
        on right: 48 50 53
    opt_ws_or_nl (87)
        on left: 52 53
        on right: 55 57 58 59 60 61 73
    statement <tmp_id> (88)
        on left: 54 55 56
        on right: 82 83
    math_expr <tmp_id> (89)
        on left: 57 58 59 60 61
        on right: 72
    compare_expr <tmp_id> (90)
        on left: 62 63 64 65 66 67
        on right: 74
    boolExpr <tmp_id> (91)
        on left: 68 69 70
        on right: 75
    expr <tmp_id> (92)
        on left: 71 72 73 74 75 76 77 78 79
        on right: 8 11 18 40 41 42 45 46 47 48 49 50 62 63 64 65 66 67 68 69 70 73 76 77 78 79 80 81
    prog (93)
        on left: 80 81 82 83 84 85 86 87 88 89 90
        on right: 91 92
    line (94)
        on left: 91 92
        on right: 0 3 4 92


State 0

    0 $accept: . line $end

    error       shift, and go to state 1
    PRINT       shift, and go to state 2
    EXIT        shift, and go to state 3
    NEWLINE     shift, and go to state 4
    SEMICOLON   shift, and go to state 5
    EOPU        shift, and go to state 6
    START       shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    MULTI_WS    shift, and go to state 16
    SINGLE_WS   shift, and go to state 17
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    start         go to state 20
    scope         go to state 21
    newScope      go to state 22
    ifMod         go to state 23
    if            go to state 24
    while         go to state 25
    whileMod      go to state 26
    newline       go to state 27
    term          go to state 28
    any_ws        go to state 29
    id            go to state 30
    assign        go to state 31
    statement     go to state 32
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 36
    prog          go to state 37
    line          go to state 38


State 1

   90 prog: error .

    $default  reduce using rule 90 (prog)


State 2

   55 statement: PRINT . opt_ws '|' exprList opt_ws_or_nl '|'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws  go to state 39
    opt_ws  go to state 40


State 3

   56 statement: EXIT . '|' opt_ws '|'

    '|'  shift, and go to state 41


State 4

   20 newline: NEWLINE .

    $default  reduce using rule 20 (newline)


State 5

   21 newline: SEMICOLON .

    $default  reduce using rule 21 (newline)


State 6

   88 prog: EOPU .

    $default  reduce using rule 88 (prog)


State 7

    1 start: START .

    $default  reduce using rule 1 (start)


State 8

    8 ifMod: IF . any_ws expr any_ws

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 42


State 9

   18 while: WHILE . any_ws expr

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 43


State 10

   22 term: INT_VAL .

    $default  reduce using rule 22 (term)


State 11

   23 term: DOUBLE_VAL .

    $default  reduce using rule 23 (term)


State 12

   25 term: STRING_VAL .

    $default  reduce using rule 25 (term)


State 13

   26 term: CHAR_VAL .

    $default  reduce using rule 26 (term)


State 14

   27 term: BOOL_VAL .

    $default  reduce using rule 27 (term)


State 15

   24 term: FLOAT_VAL .

    $default  reduce using rule 24 (term)


State 16

   35 any_ws: MULTI_WS .

    $default  reduce using rule 35 (any_ws)


State 17

   36 any_ws: SINGLE_WS .

    $default  reduce using rule 36 (any_ws)


State 18

   39 id: ID .

    $default  reduce using rule 39 (id)


State 19

   57 math_expr: '(' . ADD exprList opt_ws_or_nl ')'
   58          | '(' . SUB exprList opt_ws_or_nl ')'
   59          | '(' . MUL exprList opt_ws_or_nl ')'
   60          | '(' . DIV exprList opt_ws_or_nl ')'
   61          | '(' . POW exprList opt_ws_or_nl ')'
   62 compare_expr: '(' . LESS any_ws expr any_ws expr opt_ws ')'
   63             | '(' . GREATER any_ws expr any_ws expr opt_ws ')'
   64             | '(' . LESS_EQUAL any_ws expr any_ws expr opt_ws ')'
   65             | '(' . GREATER_EQUAL any_ws expr any_ws expr opt_ws ')'
   66             | '(' . EQUAL any_ws expr any_ws expr opt_ws ')'
   67             | '(' . NOT_EQUAL any_ws expr any_ws expr opt_ws ')'
   68 boolExpr: '(' . AND any_ws expr any_ws expr opt_ws ')'
   69         | '(' . NOT any_ws expr opt_ws ')'
   70         | '(' . OR any_ws expr any_ws expr opt_ws ')'
   73 expr: '(' . CAST any_ws expr any_ws types opt_ws_or_nl ')'

    CAST           shift, and go to state 44
    LESS           shift, and go to state 45
    GREATER        shift, and go to state 46
    LESS_EQUAL     shift, and go to state 47
    GREATER_EQUAL  shift, and go to state 48
    EQUAL          shift, and go to state 49
    NOT_EQUAL      shift, and go to state 50
    AND            shift, and go to state 51
    OR             shift, and go to state 52
    NOT            shift, and go to state 53
    ADD            shift, and go to state 54
    SUB            shift, and go to state 55
    MUL            shift, and go to state 56
    DIV            shift, and go to state 57
    POW            shift, and go to state 58


State 20

    3 scope: start . newline line
    4      | start . any_ws line
    5      | start . newline
    6      | start . any_ws

    NEWLINE    shift, and go to state 4
    SEMICOLON  shift, and go to state 5
    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    newline  go to state 59
    any_ws   go to state 60


State 21

    7 newScope: scope . end

    END  shift, and go to state 61

    end  go to state 62


State 22

   84 prog: newScope .

    $default  reduce using rule 84 (prog)


State 23

   14 if: ifMod . newScope
   15   | ifMod . scope elseMod any_ws scope end
   16   | ifMod . scope elifChain end
   17   | ifMod . scope elifChain elseMod any_ws scope end

    START  shift, and go to state 7

    start     go to state 20
    scope     go to state 63
    newScope  go to state 64


State 24

   86 prog: if .

    $default  reduce using rule 86 (prog)


State 25

   19 whileMod: while . any_ws newScope

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 65


State 26

   87 prog: whileMod .

    $default  reduce using rule 87 (prog)


State 27

   85 prog: newline .

    $default  reduce using rule 85 (prog)


State 28

   71 expr: term .

    $default  reduce using rule 71 (expr)


State 29

   89 prog: any_ws .

    $default  reduce using rule 89 (prog)


State 30

   28 term: id .
   40 assign: id . ':' opt_ws types opt_ws '=' opt_ws expr
   41       | id . opt_ws '=' opt_ws expr
   42       | id . ':' opt_ws types '<' REF '>' opt_ws '=' opt_ws expr
   43       | id . ':' opt_ws LIST '<' types '>' opt_ws '=' opt_ws '[' ']'
   44       | id . ':' opt_ws MAP '<' types opt_ws POINTS_TO opt_ws types '>' opt_ws '=' opt_ws '{' '}'
   45       | id . ':' opt_ws LIST '<' types '>' opt_ws '=' opt_ws expr
   46       | id . opt_ws '=' opt_ws expr '<' REF '>'
   76 expr: id . '.' ADD_LIST '|' opt_ws expr opt_ws '|'
   77     | id . '.' ADD_MAP '|' opt_ws expr any_ws expr opt_ws '|'
   78     | id . '[' opt_ws expr opt_ws ']'
   79     | id . '.' SET '|' opt_ws expr any_ws expr opt_ws '|'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17
    ':'        shift, and go to state 66
    '['        shift, and go to state 67
    '.'        shift, and go to state 68

    '='       reduce using rule 38 (opt_ws)
    $default  reduce using rule 28 (term)

    any_ws  go to state 39
    opt_ws  go to state 69


State 31

   54 statement: assign .

    $default  reduce using rule 54 (statement)


State 32

   82 prog: statement . newline
   83     | statement . EOPU

    NEWLINE    shift, and go to state 4
    SEMICOLON  shift, and go to state 5
    EOPU       shift, and go to state 70

    newline  go to state 71


State 33

   72 expr: math_expr .

    $default  reduce using rule 72 (expr)


State 34

   74 expr: compare_expr .

    $default  reduce using rule 74 (expr)


State 35

   75 expr: boolExpr .

    $default  reduce using rule 75 (expr)


State 36

   80 prog: expr . newline
   81     | expr . EOPU

    NEWLINE    shift, and go to state 4
    SEMICOLON  shift, and go to state 5
    EOPU       shift, and go to state 72

    newline  go to state 73


State 37

   91 line: prog .

    $default  reduce using rule 91 (line)


State 38

    0 $accept: line . $end
   92 line: line . prog

    $end        shift, and go to state 74
    error       shift, and go to state 1
    PRINT       shift, and go to state 2
    EXIT        shift, and go to state 3
    NEWLINE     shift, and go to state 4
    SEMICOLON   shift, and go to state 5
    EOPU        shift, and go to state 6
    START       shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    MULTI_WS    shift, and go to state 16
    SINGLE_WS   shift, and go to state 17
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    start         go to state 20
    scope         go to state 21
    newScope      go to state 22
    ifMod         go to state 23
    if            go to state 24
    while         go to state 25
    whileMod      go to state 26
    newline       go to state 27
    term          go to state 28
    any_ws        go to state 29
    id            go to state 30
    assign        go to state 31
    statement     go to state 32
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 36
    prog          go to state 75


State 39

   37 opt_ws: any_ws .

    $default  reduce using rule 37 (opt_ws)


State 40

   55 statement: PRINT opt_ws . '|' exprList opt_ws_or_nl '|'

    '|'  shift, and go to state 76


State 41

   56 statement: EXIT '|' . opt_ws '|'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws  go to state 39
    opt_ws  go to state 77


State 42

    8 ifMod: IF any_ws . expr any_ws

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 79


State 43

   18 while: WHILE any_ws . expr

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 80


State 44

   73 expr: '(' CAST . any_ws expr any_ws types opt_ws_or_nl ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 81


State 45

   62 compare_expr: '(' LESS . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 82


State 46

   63 compare_expr: '(' GREATER . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 83


State 47

   64 compare_expr: '(' LESS_EQUAL . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 84


State 48

   65 compare_expr: '(' GREATER_EQUAL . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 85


State 49

   66 compare_expr: '(' EQUAL . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 86


State 50

   67 compare_expr: '(' NOT_EQUAL . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 87


State 51

   68 boolExpr: '(' AND . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 88


State 52

   70 boolExpr: '(' OR . any_ws expr any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 89


State 53

   69 boolExpr: '(' NOT . any_ws expr opt_ws ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 90


State 54

   57 math_expr: '(' ADD . exprList opt_ws_or_nl ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws       go to state 39
    opt_ws       go to state 91
    exprList     go to state 92
    opt_newline  go to state 93


State 55

   58 math_expr: '(' SUB . exprList opt_ws_or_nl ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws       go to state 39
    opt_ws       go to state 91
    exprList     go to state 94
    opt_newline  go to state 93


State 56

   59 math_expr: '(' MUL . exprList opt_ws_or_nl ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws       go to state 39
    opt_ws       go to state 91
    exprList     go to state 95
    opt_newline  go to state 93


State 57

   60 math_expr: '(' DIV . exprList opt_ws_or_nl ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws       go to state 39
    opt_ws       go to state 91
    exprList     go to state 96
    opt_newline  go to state 93


State 58

   61 math_expr: '(' POW . exprList opt_ws_or_nl ')'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws       go to state 39
    opt_ws       go to state 91
    exprList     go to state 97
    opt_newline  go to state 93


State 59

    3 scope: start newline . line
    5      | start newline .

    error       shift, and go to state 1
    PRINT       shift, and go to state 2
    EXIT        shift, and go to state 3
    NEWLINE     shift, and go to state 4
    SEMICOLON   shift, and go to state 5
    EOPU        shift, and go to state 6
    START       shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    MULTI_WS    shift, and go to state 16
    SINGLE_WS   shift, and go to state 17
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    END      reduce using rule 5 (scope)
    ELSE     reduce using rule 5 (scope)
    ELSE_IF  reduce using rule 5 (scope)

    start         go to state 20
    scope         go to state 21
    newScope      go to state 22
    ifMod         go to state 23
    if            go to state 24
    while         go to state 25
    whileMod      go to state 26
    newline       go to state 27
    term          go to state 28
    any_ws        go to state 29
    id            go to state 30
    assign        go to state 31
    statement     go to state 32
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 36
    prog          go to state 37
    line          go to state 98


State 60

    4 scope: start any_ws . line
    6      | start any_ws .

    error       shift, and go to state 1
    PRINT       shift, and go to state 2
    EXIT        shift, and go to state 3
    NEWLINE     shift, and go to state 4
    SEMICOLON   shift, and go to state 5
    EOPU        shift, and go to state 6
    START       shift, and go to state 7
    IF          shift, and go to state 8
    WHILE       shift, and go to state 9
    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    MULTI_WS    shift, and go to state 16
    SINGLE_WS   shift, and go to state 17
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    END      reduce using rule 6 (scope)
    ELSE     reduce using rule 6 (scope)
    ELSE_IF  reduce using rule 6 (scope)

    start         go to state 20
    scope         go to state 21
    newScope      go to state 22
    ifMod         go to state 23
    if            go to state 24
    while         go to state 25
    whileMod      go to state 26
    newline       go to state 27
    term          go to state 28
    any_ws        go to state 29
    id            go to state 30
    assign        go to state 31
    statement     go to state 32
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 36
    prog          go to state 37
    line          go to state 99


State 61

    2 end: END .

    $default  reduce using rule 2 (end)


State 62

    7 newScope: scope end .

    $default  reduce using rule 7 (newScope)


State 63

    7 newScope: scope . end
   15 if: ifMod scope . elseMod any_ws scope end
   16   | ifMod scope . elifChain end
   17   | ifMod scope . elifChain elseMod any_ws scope end

    END      shift, and go to state 61
    ELSE     shift, and go to state 100
    ELSE_IF  shift, and go to state 101

    end        go to state 62
    elseif     go to state 102
    elseMod    go to state 103
    elifMod    go to state 104
    elifChain  go to state 105


State 64

   14 if: ifMod newScope .

    $default  reduce using rule 14 (if)


State 65

   19 whileMod: while any_ws . newScope

    START  shift, and go to state 7

    start     go to state 20
    scope     go to state 21
    newScope  go to state 106


State 66

   40 assign: id ':' . opt_ws types opt_ws '=' opt_ws expr
   42       | id ':' . opt_ws types '<' REF '>' opt_ws '=' opt_ws expr
   43       | id ':' . opt_ws LIST '<' types '>' opt_ws '=' opt_ws '[' ']'
   44       | id ':' . opt_ws MAP '<' types opt_ws POINTS_TO opt_ws types '>' opt_ws '=' opt_ws '{' '}'
   45       | id ':' . opt_ws LIST '<' types '>' opt_ws '=' opt_ws expr

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws  go to state 39
    opt_ws  go to state 107


State 67

   78 expr: id '[' . opt_ws expr opt_ws ']'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws  go to state 39
    opt_ws  go to state 108


State 68

   76 expr: id '.' . ADD_LIST '|' opt_ws expr opt_ws '|'
   77     | id '.' . ADD_MAP '|' opt_ws expr any_ws expr opt_ws '|'
   79     | id '.' . SET '|' opt_ws expr any_ws expr opt_ws '|'

    ADD_LIST  shift, and go to state 109
    ADD_MAP   shift, and go to state 110
    SET       shift, and go to state 111


State 69

   41 assign: id opt_ws . '=' opt_ws expr
   46       | id opt_ws . '=' opt_ws expr '<' REF '>'

    '='  shift, and go to state 112


State 70

   83 prog: statement EOPU .

    $default  reduce using rule 83 (prog)


State 71

   82 prog: statement newline .

    $default  reduce using rule 82 (prog)


State 72

   81 prog: expr EOPU .

    $default  reduce using rule 81 (prog)


State 73

   80 prog: expr newline .

    $default  reduce using rule 80 (prog)


State 74

    0 $accept: line $end .

    $default  accept


State 75

   92 line: line prog .

    $default  reduce using rule 92 (line)


State 76

   55 statement: PRINT opt_ws '|' . exprList opt_ws_or_nl '|'

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    $default  reduce using rule 38 (opt_ws)

    any_ws       go to state 39
    opt_ws       go to state 91
    exprList     go to state 113
    opt_newline  go to state 93


State 77

   56 statement: EXIT '|' opt_ws . '|'

    '|'  shift, and go to state 114


State 78

   28 term: id .
   76 expr: id . '.' ADD_LIST '|' opt_ws expr opt_ws '|'
   77     | id . '.' ADD_MAP '|' opt_ws expr any_ws expr opt_ws '|'
   78     | id . '[' opt_ws expr opt_ws ']'
   79     | id . '.' SET '|' opt_ws expr any_ws expr opt_ws '|'

    '['  shift, and go to state 67
    '.'  shift, and go to state 68

    $default  reduce using rule 28 (term)


State 79

    8 ifMod: IF any_ws expr . any_ws

    MULTI_WS   shift, and go to state 16
    SINGLE_WS  shift, and go to state 17

    any_ws  go to state 115


State 80

   18 while: WHILE any_ws expr .

    $default  reduce using rule 18 (while)


State 81

   73 expr: '(' CAST any_ws . expr any_ws types opt_ws_or_nl ')'

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 116


State 82

   62 compare_expr: '(' LESS any_ws . expr any_ws expr opt_ws ')'

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 117


State 83

   63 compare_expr: '(' GREATER any_ws . expr any_ws expr opt_ws ')'

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 118


State 84

   64 compare_expr: '(' LESS_EQUAL any_ws . expr any_ws expr opt_ws ')'

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 119


State 85

   65 compare_expr: '(' GREATER_EQUAL any_ws . expr any_ws expr opt_ws ')'

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 120


State 86

   66 compare_expr: '(' EQUAL any_ws . expr any_ws expr opt_ws ')'

    INT_VAL     shift, and go to state 10
    DOUBLE_VAL  shift, and go to state 11
    STRING_VAL  shift, and go to state 12
    CHAR_VAL    shift, and go to state 13
    BOOL_VAL    shift, and go to state 14
    FLOAT_VAL   shift, and go to state 15
    ID          shift, and go to state 18
    '('         shift, and go to state 19

    term          go to state 28
    id            go to state 78
    math_expr     go to state 33
    compare_expr  go to state 34
    boolExpr      go to state 35
    expr          go to state 121


State 87

   67 compare_expr: '(' NOT_EQUAL any_ws . expr any_ws expr opt_ws ')'
